fix justification and sizing on narrow screens

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,7 +16,8 @@ body {
 #app {
   display: flex;
   flex-direction: column;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-  width: 100%;
+  width: 95vw;
 }
